--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src --ext .js,.jsx"
   },
   "dependencies": {
-    "@xsolutioncl/ruibernate": "^0.1.3",
+    "@xsolutioncl/ruibernate": "^0.1.4",
+    "@ant-design/charts": "^2.0.0",
+    "canvas-confetti": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
